--- a/public_html/AddAdmin.css
+++ b/public_html/AddAdmin.css
@@ -1,12 +1,14 @@
 #Login{
         text-align:center;
 }
+
 /*Creates space between reset and exit button-*/
 #exit{
         margin-left:10px;
 }
-/*Removes the hyperlink from exit button and changes the text color to black*/
+
 #ExitLink{
+        /*Removes the hyperlink from exit button*/
         text-decoration:none;
         color:black;
 }
