Added a button to redirect to index.php

--- a/public_html/adminLogin.css
+++ b/public_html/adminLogin.css
@@ -13,3 +13,11 @@
 #reset{
         margin-left:10px;
 }
+/*Removes the hyperlink underneath the print and exit buttons*/
+#ExitLink{
+        text-decoration:none;
+        color:black;
+}
+#exit{
+        margin-left:10px;
+}
