--- a/public_html/css/style2.css
+++ b/public_html/css/style2.css
@@ -379,7 +379,8 @@ input.charity_description {
     height: 250px;
 }
 table{
-	width: 90%;
+	width: 95%;
+        font-size:12px;
 }
 td, tr {
 	 border: 1px solid black;
